--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,14 +1,16 @@
 @import 'normalize.css';
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 
 :root {
   --primary: #fe2c55;
   --black: #000;
-  --text-color: #333;
+  --text-color: #161823;
   --while: #fff;
+
+  --font-family: 'ProximaNova', sans-serif;
   //Default layout:
   --default-layout-header-height: 60px;
   --default-layout-width: 1150px;
+  --default-layout-horizontal-spacer: 24px;
 }
 
 * {
@@ -22,11 +24,12 @@ html {
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: var(--font-family);
   font-size: 1.6rem;
   line-height: 1.5;
   text-rendering: optimizespeed;
   color: var(--text-color);
+  overflow-y: overlay;
 }
 
 button, input, [tabindex] {
@@ -34,7 +37,61 @@ button, input, [tabindex] {
   border: none;
 }
 
-a[href] {
+// Scroll bar css::after
+html *::-webkit-scrollbar {
+  border-radius: 0;
+  width: 8px;
+}
+html *::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .15);
+}
+html *::-webkit-scrollbar-track {
+  border-radius: 0;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+a {
   color: var(--text-color);
   text-decoration: none;
 }
+
+// FONTS:
+@font-face {
+  font-family: ProximaNova;
+  src: url('/assets/fonts/Proxima-Nova-Regular.woff2');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: ProximaNova;
+  src: url('/assets/fonts/Proxima-Nova-Semibold.woff2');
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: ProximaNova;
+  src: url('/assets/fonts/ProximaNova-Semibold.woff2');
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: SofiaPro;
+  src: url('/assets/fonts/sofiapro-bold.woff');
+  font-weight: 700;
+}
+// Custom tippy tooltip:
+body {
+  .tippy-box {
+    background-color: rgba(84,84,84,0.92);
+    border-radius: 8px;
+    font-weight: 600;
+    font-size: 1.6 rem;
+    line-height: 2.2 rem;
+  }
+  .tippy-arrow {
+    color: rgba(84,84,84,0.92);
+  }
+}
+  
+  
