--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -6,6 +6,9 @@
 
 .container {
   width: var(--default-layout-width, 1150px);
+  max-width: 100%;
+  padding: 0 var(--default-layout-horizontal-spacer);
+  margin-top: 60px;
   display: flex;
 }
 
