--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -1,29 +1,3 @@
-.wrapper {
-  --search-border-radius: 92px;
-  --search-height: 46px;
-  --search-top-spacer: 9px;
-  --search-button-width: 52px;
-
-  width: 100%;
-  height: var(--default-layout-header-height, 60px);
-  box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
-  display: flex;
-  justify-content: center;
-}
-
-.inner {
-  height: 100%;
-  width: var(--default-layout-width, 1150px);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  // margin-left: auto;
-  // margin-right: auto;
-}
-.logo {
-  
-
-}
 
 .search,
 .search-result {
@@ -40,6 +14,7 @@
   display: flex;
   position: relative;
   border: 1.5px solid transparent;
+  font-family: var(--font-family);
 
   input {
     flex: 1;
@@ -49,7 +24,7 @@
     caret-color: var(--primary);
     border: none;
     outline: none;
-    
+    padding-right: 40px;
     background-color: transparent;
   }
 
@@ -86,6 +61,18 @@
   top: 50%;
   transform: translateY(-50%);
   color:rgba(22, 24, 35, 0.34);
+}
+.loading{
+  animation: spinner 1s linear infinite;
+}
+
+@keyframes spinner {
+  from {
+    transform: translateY(-50%) rotate(0);
+  }
+  to {
+    transform: translateY(-50%) rotate(360deg);
+  }
 }
 .search-btn{
   width: var(--search-button-width);
